Add search engine name validation.

--- a/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
+++ b/src/Presentation/Nop.Web/App_Data/Localization/defaultResources.nopres.xml
@@ -13146,6 +13146,9 @@
   <LocaleResource Name="Admin.SearchTermReport.Keyword">
     <Value>Keyword</Value>
   </LocaleResource>
+  <LocaleResource Name="Admin.SEO.SeName.MaxLengthValidation">
+    <Value>Search name maximum length is {0} characters</Value>
+  </LocaleResource>
   <LocaleResource Name="Admin.Settings.ReviewType">
     <Value>Review types</Value>
   </LocaleResource>
